Fix z-index and image location for photoswipe css.

--- a/gato-lib/src/main/resources/gato-lib/js/photoswipe/default-skin/default-skin.scss
+++ b/gato-lib/src/main/resources/gato-lib/js/photoswipe/default-skin/default-skin.scss
@@ -11,6 +11,9 @@
 	6. Additional styles (root element, top bar, idle state, hidden state, etc.)
 
 */
+
+$pswpdir: $resource-root+"/gato-lib/js/photoswipe/default-skin";
+
 /*
 	
 	1. Buttons
@@ -52,7 +55,7 @@
 .pswp__button,
 .pswp__button--arrow--left:before,
 .pswp__button--arrow--right:before {
-  background: url(default-skin.png) 0 0 no-repeat;
+  background: url($pswpdir+"/default-skin.png") 0 0 no-repeat;
   background-size: 264px 88px;
   width: 44px;
   height: 44px; }
@@ -62,7 +65,7 @@
   .pswp--svg .pswp__button,
   .pswp--svg .pswp__button--arrow--left:before,
   .pswp--svg .pswp__button--arrow--right:before {
-    background-image: url(default-skin.svg); }
+    background-image: url($pswpdir+"/default-skin.svg"); }
   .pswp--svg .pswp__button--arrow--left,
   .pswp--svg .pswp__button--arrow--right {
     background: none; } }
@@ -154,7 +157,7 @@
   left: 0;
   padding: 10px;
   position: absolute;
-  z-index: 1600;
+  z-index: 160000;
   opacity: 0;
   -webkit-transition: opacity 0.25s ease-out;
           transition: opacity 0.25s ease-out;
@@ -165,7 +168,7 @@
   display: none; }
 
 .pswp__share-tooltip {
-  z-index: 1620;
+  z-index: 162000;
   position: absolute;
   background: #FFF;
   top: 56px;
@@ -316,7 +319,7 @@ a.pswp__share--download:hover {
   opacity: 1; }
   .pswp__preloader--active .pswp__preloader__icn {
     /* We use .gif in browsers that don't support CSS animation */
-    background: url(preloader.gif) 0 0 no-repeat; }
+    background: url($pswpdir+"/preloader.gif") 0 0 no-repeat; }
 
 .pswp--css_animation .pswp__preloader--active {
   opacity: 1; }
@@ -418,7 +421,7 @@ a.pswp__share--download:hover {
   -webkit-font-smoothing: auto;
   visibility: visible;
   opacity: 1;
-  z-index: 1550; }
+  z-index: 155000; }
 
 /* top black bar with buttons and "1 of X" indicator */
 .pswp__top-bar {
